# harbor-guardians

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  LICENSE  M0_EXIT_EVIDENCE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.engine.json  tsconfig.json
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: README.md  ci.yml
data/: README.md
data/combat/: README.md
data/economy/: README.md  storage.broken.invalid.json  storage.st1.json
data/expeditions/: README.md  exp.broken.invalid.json  (+1 more)
docs/: 00_PRE_M0_MASTER_MANIFEST_v1.3.md  14_DESIGN_PILLARS_v0.1.md  M0_IMPLEMENTATION_READINESS_PACKET_v0.1.3.md  README.md
schema/: README.md  claim_ledger_rules_seed.schema.json  event_fixture_seed.schema.json  expedition_seed.schema.json  guardian_kit_seed.schema.json  resource_storage_seed.schema.json  save_blob.schema.json
scripts/: build-playthrough.mts  build-save-validator.mjs  build-schema.mjs  copy-engine-assets.mjs  generate-schema.mjs  validate-data.mjs
sim-harness/: README.md  data-contract-checks.ts  determinism.ts  event-checks.ts  event-fixtures.ts  expedition-checks.ts  expedition-seed.ts  ledger-checks.ts  ledger-rules-seed.ts  personas.ts  registry.ts  run.ts  storage-seed.ts  types.ts
src/: README.md  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: README.md  claim-ledger.test.ts  event-lifecycle.test.ts  expedition.test.ts  harbor-state.test.ts  save-load.test.ts  ui-controller.test.ts
(+116 files in other folders)
